@@ -17,7 +17,7 @@ You should have received a copy of the GNU General Public License along
 with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
 
-const char notdef[] = ".notdef";
+char notdef[] = ".notdef";
 
 const char *mac_glyph_names[] = {
 /* 0x00 */
