@@ -240,7 +240,7 @@ char **load_enc_file(char *enc_name)
     }
     glyph_names = xtalloc(256, char *);
     for (i = 0; i < 256; i++)
-        glyph_names[i] = (char *) notdef;
+        glyph_names[i] = notdef;
     t1_log("{");
     t1_log(cur_file_name = (char *) nameoffile + 1);
     enc_getline();
@@ -753,7 +753,7 @@ static void copy_glyph_names(char **glyph_names, int a, int b)
 {
     if (glyph_names[b] != notdef) {
         xfree(glyph_names[b]);
-        glyph_names[b] = (char *) notdef;
+        glyph_names[b] = notdef;
     }
     if (glyph_names[a] != notdef) {
         glyph_names[b] = xstrdup(glyph_names[a]);
@@ -769,7 +769,7 @@ static char **t1_builtin_enc(void)
     /* At this moment "/Encoding" is the prefix of t1_line_array */
     glyph_names = xtalloc(256, char *);
     for (i = 0; i < 256; i++)
-        glyph_names[i] = (char *) notdef;
+        glyph_names[i] = notdef;
     if (t1_suffix("def")) {     /* predefined encoding */
         sscanf(t1_line_array + strlen("/Encoding"), "%256s", t1_buf_array);
         if (strcmp(t1_buf_array, "StandardEncoding") == 0) {
@@ -967,7 +967,7 @@ static void cs_store(boolean is_subr)
             pdftex_fail
                 ("CharStrings dict: more entries than dict size (%i)", cs_size);
         if (strcmp(t1_buf_array + 1, notdef) == 0)      /* skip the slash */
-            ptr->name = (char *) notdef;
+            ptr->name = notdef;
         else
             ptr->name = xstrdup(t1_buf_array + 1);
     }
