@@ -1,3 +1,14 @@
+2013-01-10  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* macnames.c, pdftex-common.h, pdftoepdf.cc, ttf2afm.c,
+	writet1.c: Change 'const char notdef[]' -> 'char notdef[]' and
+	remove casts (const char *) -> (char *).
+
+	* mapfile.c (dummy_fm_entry): Delare const_fm_entry as non-const
+	and remove the cast.
+
+	* utils.c (writestreamlength): Cast length for printing.
+
 2012-12-16  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* am/pdftex.am (pdftex_version.h): Enable silent rules.
