@@ -1,3 +1,7 @@
+2013-01-10  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* pdf/pdfgen.w (write_stream_length): Cast length for printing.
+
 2012-12-16  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* am/libluatex.am (luatex_*_ctangle, pdflua.c):
